[tool.poetry]
name = "app"
version = "0.1.0"
description = "LangGraph SQL Agent for Google Ads Database"
package-mode = false

[project]
name = "app"
version = "0.1.0"
description = "LangGraph SQL Agent for Google Ads Database"
authors = [
    {name = "Shota Suzuki",email = "ssuzuki@harvest-w.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"


[tool.black]
line-length = 100
target-version = ["py313"]


[tool.isort]
profile = "black"
line_length = 100


[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.poetry.dependencies]
httpx = "^0.27.0"